# fractal-xplorer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  PRD.md  README.md  package.sh
src/: app_state.hpp  cli_benchmark.hpp  cpu_renderer.cpp  cpu_renderer.hpp  cpu_renderer_avx.cpp  cpu_renderer_avx.hpp  escape_time.hpp  escape_time_avx.cpp  escape_time_avx.hpp  export.cpp  export.hpp  fractal.hpp  fractal_avx.hpp  main.cpp  newton.hpp  newton_avx.cpp  newton_avx.hpp  palette.cpp  palette.hpp  renderer.hpp  thread_pool.hpp  ui_panels.cpp  ui_panels.hpp  view_state.hpp
